<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@drawable/login"
            tools:context=".LoginFragment">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
    >

        <RelativeLayout
                android:background="#050FC7"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:text="Add Student"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/course"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/section">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/section"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/department">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/department"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/password_edit_text"
                    android:layout_marginBottom="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#000"
                    app:cornerRadius="10dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/button_add" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:layout_toStartOf="@id/add_button"
                    android:layout_toLeftOf="@id/add_button"
                    android:text="@string/button_reset" />

        </RelativeLayout>
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/toast_textview"
                    android:layout_width="wrap_content"
                      android:layout_height="wrap_content"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>